# spiegel-web

./: .gitignore  README.md  index.html  package-lock.json  package.json  webpack.config.js
image-processor/src/: lib.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs
src/css/: styles.css
src/js/: filters.js  index.js
webclient/: Cargo.toml  README.md
webclient/src/: lib.rs  quantizer.rs  samples.rs  samplesold.rs
