[package]
edition = "2021"
name = "spiegel-client"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
image = "0.24.1"
imageproc = "0.23"
hex = "0.4"
anyhow = "1.0"
photon-rs = { version = "0.3.2", default-features = false }
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen = "0.2.78"

[lib]
crate-type = ["cdylib", "rlib"]
